A fix and a test case for Bug#13587 "Server crash when SP is created without database"

mysql-test/r/sp-error.result:
  Test results fixed (a test case for Bug#13587)
mysql-test/t/sp-error.test:
  A test case for Bug#13587 "Server crash when SP is created without 
  database"
sql/sql_parse.cc:
  - move initialization of lex->sphead->m_db before it's used.
  - cleanup; comment why right now can't be cleaned any more